--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --detectOpenHandles",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -37,8 +37,8 @@
     ]
   },
   "devDependencies": {
-    "@testing-library/react": "^16.0.0",
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
-
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@babel/plugin-transform-private-property-in-object": "^7.24.7",
+    "@testing-library/react": "^16.0.0"
   }
 }
