--- a/package.json
+++ b/package.json
@@ -40,6 +40,12 @@
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@babel/plugin-transform-private-property-in-object": "^7.24.7",
-    "@testing-library/react": "^16.0.0"
+    "@playwright/test": "^1.45.1",
+    "@testing-library/react": "^16.0.0",
+    "@types/node": "^20.14.10",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@types/react-router-dom": "^5.3.3",
+    "typescript": "^5.5.3"
   }
 }
